--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -1,15 +1,25 @@
-.seeMoreBtnWrapper {
+.loadMoreWrapper {
   display: flex;
   justify-content: center;
-  text-align: center;
-  margin-bottom: 20px;
 }
 
-.seeMoreBtn {
-  background-color: #6cb2eb;
+.button {
+  padding: 15px;
+  background-color: orangered;
   border: none;
-  border-radius: 5px;
-  padding: 10px;
-  color: white;
+  border-radius: 50px;
   cursor: pointer;
+  font-size: 15px;
+  transition-duration: 0.4s;
+  color: white;
+}
+
+.button:active,
+.button:hover {
+  background-color: #f51202;
+  transform: translateY(2px);
+}
+
+.buttonLink {
+  color: inherit;
 }
